<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:gravity="top"
            android:paddingStart="1dp"
            android:paddingTop="-2dp"
            android:paddingEnd="10dp"
            android:paddingBottom="0dp"
            android:text="@string/sample_item_day"
            android:textAlignment="textEnd"
            android:textColor="@color/widgetDefaultColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_dayofweek"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/lato_light"
            android:paddingStart="1dp"
            android:paddingEnd="10dp"
            android:text="@string/sample_item_dayofweek"
            android:textAlignment="textEnd"
            android:textColor="@color/widgetDefaultColor"
            android:textSize="10sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/item_color"
        android:layout_width="2dp"
        android:layout_height="38dp"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:paddingStart="10dp"
            android:paddingEnd="1dp"
            android:singleLine="true"
            android:text="@string/sample_item_title"
            android:textColor="@color/widgetDefaultColor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/item_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_light"
            android:paddingStart="10dp"
            android:paddingTop="2dp"
            android:paddingEnd="1dp"
            android:singleLine="true"
            android:text="@string/sample_item_time"
            android:textColor="@color/widgetDefaultColor"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>